--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GYZPJBDZ8R"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GYZPJBDZ8R');
-</script>
    <title>Hemel en Aarde</title>
     <link rel="stylesheet" type="text/css" href=css/style.css>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Newsreader&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">  
 </head>
 <body>
     <header class="header">
@@ -41,14 +35,14 @@
         <div class="container">
         <div class="row mt-5">
             <div class="col-sm-6">
-                <img src="img/burgers2.jpg" class="img-fluid">
+                <img src="img/Burgers.jpg" class="img-fluid">
             </div>
              <div class="col-sm-6">
-             <img src="img/Grill.jpg" class="img-fluid">
+             <img src="img/Grill2.jpg" class="img-fluid">
             </div>
             <div class="text">
             <h1 class="bigtext">Welcome to Restaurant Hemel en Aarde!</h1>
-               <h3> A website made by: Lisenka Velderman </h3>
+            <h3> A website made by: Lisenka Velderman </h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. </p>
                 <p><a href="https://www.buas.nl/">Click here to see more!</a></p>
