--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             </div>
             </nav>
     </header>
-        
         <div class="container">
         <div class="row mt-5">
             <div class="col-sm-6">
@@ -58,6 +57,19 @@
             </div>
         </div>
         </div>
+    <footer class= "container-fluid mt-5">
+        <div class="container pt-2 pb-2">
+            <div class="row d-flex align-items-center">
+                <div class="col-6">
+                 <p class="Tel">Tel: 0183 123456</p>
+                 <p class="Mail">Mail: voorbeeld@mail.com</p>
+                </div>
+            <div class="col-6">
+                <img src="img/logo2.png" width="150px" class="mx-auto d-block">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
