--- a/products.html
+++ b/products.html
@@ -81,8 +81,22 @@
                         </p>
                     </div>
                 </div>
+            </div>     
+        </div>
+        </div>
+      <footer class= "container-fluid mt-5">
+        <div class="container pt-2 pb-2">
+            <div class="row d-flex align-items-center">
+                <div class="col-6">
+                 <p class="Tel">Tel: 0183 123456</p>
+                 <p class="Mail">Mail: voorbeeld@mail.com</p>
+                </div>
+            <div class="col-6">
+                <img src="img/logo2.png" width="150px" class="mx-auto d-block">
+                </div>
             </div>
-            
         </div>
-        </div>
+    </footer>
     </body>
+</html>
+   
