--- a/172959.html
+++ b/172959.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SF25VESB9Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SF25VESB9Q');
+</script>
    <title>Hemel en Aarde</title>
     <link rel="stylesheet" type="text/css" href=css/style.css>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -22,7 +31,7 @@
                 <a class="nav-link" href="index.html">HOME</a>
             </li>
                <li class="navitem">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="172959.html">Products</a>
             </li>
             </ul>            
             </div>
