--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="index.html">HOME</a>
             </li>
                <li class="navitem">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="172959.html">Products</a>
             </li>
             </ul>            
             </div>
