--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         </div>
-    <footer class= "container-fluid mt-5">
+    <footer class= "container-fluid mt-5 style="border:1px solid #cecece;">
         <div class="container pt-2 pb-2">
             <div class="row d-flex align-items-center">
                 <div class="col-6">
