--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
              <img src="img/Grill2.jpg" class="img-fluid">
             </div>
             <div class="text">
-            <h1 class="bigtext">Welcome to Restaurant Hemel en Aarde!</h1>
+            <h1 id="bigtext">Welcome to Restaurant Hemel en Aarde!</h1>
             <h3> A website made by: Lisenka Velderman </h3>
              <h3> Edited by Daphne Sieffers </h3>
             <p>
